--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,28 +31,30 @@ if(BUILD_TESTING)
     enable_testing()
 endif()
 
-# Create header-only library
-add_library(nano-stream INTERFACE)
+# Create library with both headers and implementation
+add_library(nano-stream 
+    src/aeron_impl.cpp
+)
 
 target_include_directories(nano-stream 
-    INTERFACE 
+    PUBLIC 
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
 )
 
 target_link_libraries(nano-stream 
-    INTERFACE 
+    PUBLIC 
         Threads::Threads
 )
 
 # Set target properties
-target_compile_features(nano-stream INTERFACE cxx_std_20)
+target_compile_features(nano-stream PUBLIC cxx_std_20)
 
-# Suppress unused parameter warnings for the interface library
+# Suppress unused parameter warnings
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
-    target_compile_options(nano-stream INTERFACE -Wno-unused-parameter)
+    target_compile_options(nano-stream PRIVATE -Wno-unused-parameter)
 elseif(MSVC)
-    target_compile_options(nano-stream INTERFACE /wd4100)
+    target_compile_options(nano-stream PRIVATE /wd4100)
 endif()
 
 # Add subdirectories conditionally
