--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,25 +8,29 @@ add_executable(advanced_example
     advanced_example.cpp
 )
 
-add_executable(aeron_simple_basic
-    aeron_simple_basic.cpp
+
+
+
+
+add_executable(complete_aeron_example
+    complete_aeron_example.cpp
 )
 
-add_executable(aeron_ipc_example
-    aeron_ipc_example.cpp
+add_executable(aeron_full_example
+    aeron_full_example.cpp
 )
 
 # Suppress unused parameter warnings for each target
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     target_compile_options(basic_example PRIVATE -Wno-unused-parameter)
     target_compile_options(advanced_example PRIVATE -Wno-unused-parameter)
-    target_compile_options(aeron_simple_basic PRIVATE -Wno-unused-parameter)
-    target_compile_options(aeron_ipc_example PRIVATE -Wno-unused-parameter)
+    target_compile_options(complete_aeron_example PRIVATE -Wno-unused-parameter)
+    target_compile_options(aeron_full_example PRIVATE -Wno-unused-parameter)
 elseif(MSVC)
     target_compile_options(basic_example PRIVATE /wd4100)
     target_compile_options(advanced_example PRIVATE /wd4100)
-    target_compile_options(aeron_simple_basic PRIVATE /wd4100)
-    target_compile_options(aeron_ipc_example PRIVATE /wd4100)
+    target_compile_options(complete_aeron_example PRIVATE /wd4100)
+    target_compile_options(aeron_full_example PRIVATE /wd4100)
 endif()
 
 target_link_libraries(basic_example
@@ -39,12 +43,14 @@ target_link_libraries(advanced_example
         nano-stream
 )
 
-target_link_libraries(aeron_simple_basic
+
+
+target_link_libraries(complete_aeron_example
     PRIVATE
         nano-stream
 )
 
-target_link_libraries(aeron_ipc_example
+target_link_libraries(aeron_full_example
     PRIVATE
         nano-stream
 )
@@ -59,12 +65,13 @@ target_include_directories(advanced_example
         ${CMAKE_SOURCE_DIR}/include
 )
 
-target_include_directories(aeron_simple_basic
+
+target_include_directories(complete_aeron_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
 )
 
-target_include_directories(aeron_ipc_example
+target_include_directories(aeron_full_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
 )
