--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -20,17 +20,23 @@ add_executable(aeron_full_example
     aeron_full_example.cpp
 )
 
+add_executable(log_buffer_example
+    log_buffer_example.cpp
+)
+
 # Suppress unused parameter warnings for each target
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     target_compile_options(basic_example PRIVATE -Wno-unused-parameter)
     target_compile_options(advanced_example PRIVATE -Wno-unused-parameter)
     target_compile_options(complete_aeron_example PRIVATE -Wno-unused-parameter)
     target_compile_options(aeron_full_example PRIVATE -Wno-unused-parameter)
+    target_compile_options(log_buffer_example PRIVATE -Wno-unused-parameter)
 elseif(MSVC)
     target_compile_options(basic_example PRIVATE /wd4100)
     target_compile_options(advanced_example PRIVATE /wd4100)
     target_compile_options(complete_aeron_example PRIVATE /wd4100)
     target_compile_options(aeron_full_example PRIVATE /wd4100)
+    target_compile_options(log_buffer_example PRIVATE /wd4100)
 endif()
 
 target_link_libraries(basic_example
@@ -55,6 +61,11 @@ target_link_libraries(aeron_full_example
         nano-stream
 )
 
+target_link_libraries(log_buffer_example
+    PRIVATE
+        nano-stream
+)
+
 target_include_directories(basic_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
@@ -72,6 +83,11 @@ target_include_directories(complete_aeron_example
 )
 
 target_include_directories(aeron_full_example
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+)
+
+target_include_directories(log_buffer_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
 )
