--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -24,6 +24,10 @@ add_executable(log_buffer_example
     log_buffer_example.cpp
 )
 
+add_executable(udp_transport_example
+    udp_transport_example.cpp
+)
+
 # Suppress unused parameter warnings for each target
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     target_compile_options(basic_example PRIVATE -Wno-unused-parameter)
@@ -31,12 +35,14 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     target_compile_options(complete_aeron_example PRIVATE -Wno-unused-parameter)
     target_compile_options(aeron_full_example PRIVATE -Wno-unused-parameter)
     target_compile_options(log_buffer_example PRIVATE -Wno-unused-parameter)
+    target_compile_options(udp_transport_example PRIVATE -Wno-unused-parameter)
 elseif(MSVC)
     target_compile_options(basic_example PRIVATE /wd4100)
     target_compile_options(advanced_example PRIVATE /wd4100)
     target_compile_options(complete_aeron_example PRIVATE /wd4100)
     target_compile_options(aeron_full_example PRIVATE /wd4100)
     target_compile_options(log_buffer_example PRIVATE /wd4100)
+    target_compile_options(udp_transport_example PRIVATE /wd4100)
 endif()
 
 target_link_libraries(basic_example
@@ -66,6 +72,11 @@ target_link_libraries(log_buffer_example
         nano-stream
 )
 
+target_link_libraries(udp_transport_example
+    PRIVATE
+        nano-stream
+)
+
 target_include_directories(basic_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
@@ -88,6 +99,11 @@ target_include_directories(aeron_full_example
 )
 
 target_include_directories(log_buffer_example
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+)
+
+target_include_directories(udp_transport_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
 )
