--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -28,6 +28,10 @@ add_executable(udp_transport_example
     udp_transport_example.cpp
 )
 
+add_executable(spmc_example
+    spmc_example.cpp
+)
+
 # Suppress unused parameter warnings for each target
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     target_compile_options(basic_example PRIVATE -Wno-unused-parameter)
@@ -36,6 +40,7 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
     target_compile_options(aeron_full_example PRIVATE -Wno-unused-parameter)
     target_compile_options(log_buffer_example PRIVATE -Wno-unused-parameter)
     target_compile_options(udp_transport_example PRIVATE -Wno-unused-parameter)
+    target_compile_options(spmc_example PRIVATE -Wno-unused-parameter)
 elseif(MSVC)
     target_compile_options(basic_example PRIVATE /wd4100)
     target_compile_options(advanced_example PRIVATE /wd4100)
@@ -43,6 +48,7 @@ elseif(MSVC)
     target_compile_options(aeron_full_example PRIVATE /wd4100)
     target_compile_options(log_buffer_example PRIVATE /wd4100)
     target_compile_options(udp_transport_example PRIVATE /wd4100)
+    target_compile_options(spmc_example PRIVATE /wd4100)
 endif()
 
 target_link_libraries(basic_example
@@ -77,6 +83,11 @@ target_link_libraries(udp_transport_example
         nano-stream
 )
 
+target_link_libraries(spmc_example
+    PRIVATE
+        nano-stream
+)
+
 target_include_directories(basic_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
@@ -104,6 +115,11 @@ target_include_directories(log_buffer_example
 )
 
 target_include_directories(udp_transport_example
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+)
+
+target_include_directories(spmc_example
     PRIVATE
         ${CMAKE_SOURCE_DIR}/include
 )
