--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(nano-stream
     src/aeron/logbuffer/log_buffer_descriptor.cpp
     src/aeron/logbuffer/log_buffers.cpp
     src/aeron/logbuffer/frame_descriptor.cpp
+    src/aeron/logbuffer/term_scanner.cpp
     src/aeron/driver/log_buffer_manager.cpp
     
     # Aeron driver implementations
@@ -47,6 +48,8 @@ add_library(nano-stream
     src/aeron/driver/receiver/receiver.cpp
     src/aeron/driver/status/counters_manager.cpp
     src/aeron/driver/media_driver.cpp
+    src/aeron/driver/publication/network_publication.cpp
+    src/aeron/driver/media/send_channel_endpoint.cpp
     
     # Aeron client implementations
     src/aeron/client/aeron.cpp
